--- a/src/main/java/logisticaigu/HistorialPaquete.form
+++ b/src/main/java/logisticaigu/HistorialPaquete.form
@@ -89,10 +89,12 @@
                   <Font name="Arial" size="14" style="0"/>
                 </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="4" rowCount="4">
+                  <Table columnCount="6" rowCount="4">
                     <Column editable="true" title="Codigo del paquete" type="java.lang.Object"/>
-                    <Column editable="true" title="Descripcion" type="java.lang.Object"/>
+                    <Column editable="true" title="Destino" type="java.lang.Object"/>
                     <Column editable="true" title="Domicilio" type="java.lang.Object"/>
+                    <Column editable="true" title="Receptor" type="java.lang.Object"/>
+                    <Column editable="true" title="Descripcion" type="java.lang.Object"/>
                     <Column editable="true" title="Estado" type="java.lang.Object"/>
                   </Table>
                 </Property>
